[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "A real-world OpenEnv environment for email triage and response tasks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["server"]

[openenv]
name = "email-triage-env"
version = "1.0.0"
tasks = ["classify", "triage", "respond"]
entry_point = "server.main:app"
